; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_sched_ule.c_sched_runnable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_sched_ule.c_sched_runnable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.tdq = type { i32 }

@curthread = common dso_local global %struct.TYPE_2__* null, align 8
@TDF_IDLETD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sched_runnable() #0 {
  %1 = alloca %struct.tdq*, align 8
  %2 = alloca i32, align 4
  store i32 1, i32* %2, align 4
  %3 = call %struct.tdq* (...) @TDQ_SELF()
  store %struct.tdq* %3, %struct.tdq** %1, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curthread, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @TDF_IDLETD, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %0
  %11 = load %struct.tdq*, %struct.tdq** %1, align 8
  %12 = getelementptr inbounds %struct.tdq, %struct.tdq* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp sgt i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %10
  br label %26

16:                                               ; preds = %10
  br label %25

17:                                               ; preds = %0
  %18 = load %struct.tdq*, %struct.tdq** %1, align 8
  %19 = getelementptr inbounds %struct.tdq, %struct.tdq* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = sub nsw i32 %20, 1
  %22 = icmp sgt i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  br label %26

24:                                               ; preds = %17
  br label %25

25:                                               ; preds = %24, %16
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %25, %23, %15
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local %struct.tdq* @TDQ_SELF(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
